evoucher-iac/overlays/dev/ingress-resource/ingress-short-link.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: short-link-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "https://www.aquavoucher.com/"
    #nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "evoucher-cookie"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  #ingressClassName: nginx
  rules:
    - host: ub-urly.altimedia.vn  # Replace with your desired subdomain or domain
      http:
        paths:
          - path: /$
            pathType: Exact
            backend:
              service:
                name: frontend-ui-cluster-ip-service
                port:
                  number: 80
